# macros-handbook

./: .gitignore  Cargo.toml
macros/: Cargo.toml
macros/src/: cached_fn.rs  constant_string.rs  custom_model.rs  hash_mapify.rs  lib.rs  log_duration.rs
src/: main.rs
